--- a/index.html
+++ b/index.html
@@ -16,6 +16,44 @@
         </div>
     </header>
     <main>
+        <!-- Favorite brands section  start -->
+        <section>
+            <div class="favorite-brands">
+                <div class="favorite-brands-contant">
+                    <p>Favorite Brands</p>
+                    <h2>
+                        Your Favorite Brands Food Are Now On Sale
+                    </h2>
+                </div>
+                <div class="card-section">
+                    <!-- card 1 -->
+                    <div class="card">
+                        <div class="card-img"><img src="assets/pizza.png" alt=""></div>
+                        <p class="card-taitel">Pizza Burg</p>
+                        <h4 class="offer">Up To 50% Off</h4>
+                        <p class="card-description">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                    </div>
+                     <!-- card 2 -->
+                    <div class="card">
+                        <div class="card-img"><img src="assets/biriyani.png" alt=""></div>
+                        <p class="card-taitel">Kacchi Bhai</p>
+                        <h4 class="offer">Up To 50% Off</h4>
+                        <p class="card-description">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                    </div>
+                     <!-- card 3 -->
+                    <div class="card">
+                        <div class="card-img"><img src="assets/burger.png" alt=""></div>
+                        <p class="card-taitel">Burger King</p>
+                        <h4 class="offer">Up To 50% Off</h4>
+                        <p class="card-description">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                    </div>
+                </div>
+                <div class="favorite-brands-btn">
+                    <button class="btn ">Watch All Sells</button>
+                </div>
+            </div>
+        </section>
+        <!-- Favorite brands section end -->
 
     </main>
     <footer>
