about us cestion add

--- a/index.html
+++ b/index.html
@@ -54,6 +54,28 @@
             </div>
         </section>
         <!-- Favorite brands section end -->
+         <!-- about us section start -->
+          <section>
+            <div class="about">
+                <div class="about-img">
+                    <img src="assets/foods.png" alt="">
+                </div>
+                <div class="about-content">
+                    <h3>We always make sure to provide you with good food</h3>
+                    <p class="about-description">Don’t miss a thing! Subscribe to our newsletter</p>
+                    <p class="follow">Follow US ON</p>
+                    <div class="so-icon">
+                        <div><a href="https://www.facebook.com/profile.php?id=61561063179982"><img src="assets/facebook_5968764.png" alt=""></a></div>
+                        <div><a href=""><img src="assets/instagram_2111463.png" alt=""></a></div>
+                        <div><a href=""><img src="assets/youtube_2504848.png" alt=""></a></div>
+                        <div><a href=""><img src="assets/path_11378565.png" alt=""></a></div>
+                     </div>
+                </div>
+           
+
+            </div>
+          </section>
+          
 
     </main>
     <footer>
